tests/fixtures/pass/coalesce_infer_local_without_annotation.sali
let main(): i32 = {
  let answer = Option(_).None ?? 42
  answer
}
